--- a/index.html
+++ b/index.html
@@ -7,7 +7,23 @@
         <title>Tic-Tac-Toe</title>
     </head>
     <body>
+        <div class="game-body">
+            <h1>Tic-Tac-Toe</h1> 
+            <div id="game-board">
+                <div class="cell" data-index="o">X</div>
+                <div class="cell" data-index="1">O</div>
+                <div class="cell" data-index="2"></div>
+                <div class="cell" data-index="3"></div>
+                <div class="cell" data-index="4"></div>
+                <div class="cell" data-index="5"></div>
+                <div class="cell" data-index="6"></div>
+                <div class="cell" data-index="7"></div>
+                <div class="cell" data-index="8"></div>
+                
+            </div>
+        </div>
         
+
         <script src="index.js" defer></script>
     </body>
 </html>
