--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
         <div class="game-body">
             <h1>Tic-Tac-Toe</h1> 
             <div id="game-board">
-                <div class="cell" data-index="o">X</div>
-                <div class="cell" data-index="1">O</div>
+                <div class="cell" data-index="o"></div>
+                <div class="cell" data-index="1"></div>
                 <div class="cell" data-index="2"></div>
                 <div class="cell" data-index="3"></div>
                 <div class="cell" data-index="4"></div>
