--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
             </div>
             <div>
                 <p id="output"></p>
-                
             </div>
             <div>
                 <button id="start-game" type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">New Game</button>
@@ -44,7 +43,7 @@
                         </div>
                         <div class="modal-footer">
                             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                            <button type="submit" class="btn btn-primary">Start</button>
+                            <button type="submit" class="btn btn-primary" data-bs-dismiss="modal">Start</button>
                         </div>
                     </form>
                   </div>
